// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/FiltersDropdown default 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "paddingLeft": "200px",
      "width": "100%",
    }
  }
>
  <FiltersDropdownContainer
    filters={
      Object {
        "changed": Object {
          "defaultValue": true,
          "label": "Changed",
        },
        "entrypoint": Object {
          "defaultValue": false,
          "label": "Entrypoint",
        },
        "fileTypes": Object {
          "CSS": Object {
            "defaultValue": true,
            "label": "CSS",
          },
          "HTML": Object {
            "defaultValue": true,
            "label": "HTML",
          },
          "JS": Object {
            "defaultValue": true,
            "label": "JS",
          },
          "label": "File types",
        },
      }
    }
    onChange={[Function]}
  >
    <FiltersDropdown
      active={false}
      className=""
      filters={
        Object {
          "changed": Object {
            "defaultValue": true,
            "label": "Changed",
          },
          "entrypoint": Object {
            "defaultValue": false,
            "label": "Entrypoint",
          },
          "fileTypes": Object {
            "CSS": Object {
              "defaultValue": true,
              "label": "CSS",
            },
            "HTML": Object {
              "defaultValue": true,
              "label": "HTML",
            },
            "JS": Object {
              "defaultValue": true,
              "label": "JS",
            },
            "label": "File types",
          },
        }
      }
      label="Filters"
      onChange={[Function]}
      toggleFilter={[Function]}
      values={
        Object {
          "changed": true,
          "entrypoint": false,
          "fileTypes.CSS": true,
          "fileTypes.HTML": true,
          "fileTypes.JS": true,
        }
      }
    >
      <DropdownContainer
        align="right"
        className="root"
        glyph="filter"
        label="Filters"
      >
        <OutsideClickHandler
          disabled={false}
          display="block"
          onOutsideClick={[Function]}
          useCapture={true}
        >
          <div>
            <Dropdown
              activeLabel={false}
              align="right"
              className="root"
              dropdownToggle={[Function]}
              glyph="filter"
              label="Filters"
              open={false}
            >
              <div
                className="root right root"
              >
                <button
                  className="label"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    as="span"
                    className="labelIcon"
                    glyph="filter"
                  >
                    <span
                      className="root labelIcon"
                    >
                      <FilterIcon
                        className="icon"
                        fill="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <svg
                          className="icon"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                          />
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </FilterIcon>
                    </span>
                  </Icon>
                  Filters
                </button>
                <div
                  className="dropdown"
                >
                  <form
                    className="dropdown"
                  >
                    <div
                      className="group"
                      key=""
                    >
                      <div
                        className="groupHeader"
                      />
                      <Checkbox
                        checked={true}
                        getOnOnlyClick={null}
                        key="changed"
                        label="Changed"
                        name="changed"
                        onChange={[Function]}
                      >
                        <div
                          className="filter"
                        >
                          <label
                            className="filterLabel"
                          >
                            <input
                              checked={true}
                              className="filterInput"
                              id="filter-changed"
                              name="changed"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <span
                              className="filterText"
                            >
                              Changed
                            </span>
                          </label>
                        </div>
                      </Checkbox>
                      <Checkbox
                        checked={false}
                        getOnOnlyClick={null}
                        key="entrypoint"
                        label="Entrypoint"
                        name="entrypoint"
                        onChange={[Function]}
                      >
                        <div
                          className="filter"
                        >
                          <label
                            className="filterLabel"
                          >
                            <input
                              checked={false}
                              className="filterInput"
                              id="filter-entrypoint"
                              name="entrypoint"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <span
                              className="filterText"
                            >
                              Entrypoint
                            </span>
                          </label>
                        </div>
                      </Checkbox>
                      <div
                        className="group"
                        key="fileTypes"
                      >
                        <div
                          className="groupHeader"
                        >
                          <h3
                            className="groupTitle"
                          >
                            File types
                          </h3>
                          <button
                            className="groupHeaderButton"
                            onClick={[Function]}
                            type="button"
                          >
                            clear all
                          </button>
                        </div>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.CSS"
                          label="CSS"
                          name="fileTypes.CSS"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.CSS"
                                name="fileTypes.CSS"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                CSS
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.JS"
                          label="JS"
                          name="fileTypes.JS"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.JS"
                                name="fileTypes.JS"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                JS
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.HTML"
                          label="HTML"
                          name="fileTypes.HTML"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.HTML"
                                name="fileTypes.HTML"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                HTML
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </Dropdown>
          </div>
        </OutsideClickHandler>
      </DropdownContainer>
    </FiltersDropdown>
  </FiltersDropdownContainer>
</div>
`;

exports[`Storyshots UI/FiltersDropdown disable options 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "padding": "24px",
      "paddingLeft": "200px",
      "width": "100%",
    }
  }
>
  <FiltersDropdownContainer
    filters={
      Object {
        "changed": Object {
          "defaultValue": false,
          "disabled": true,
          "label": "Changed",
        },
        "entrypoint": Object {
          "defaultValue": false,
          "label": "Entrypoint",
        },
        "fileTypes": Object {
          "CSS": Object {
            "defaultValue": true,
            "label": "CSS",
          },
          "HTML": Object {
            "defaultValue": true,
            "label": "HTML",
          },
          "JS": Object {
            "defaultValue": true,
            "label": "JS",
          },
          "label": "File types",
        },
      }
    }
    onChange={[Function]}
  >
    <FiltersDropdown
      active={false}
      className=""
      filters={
        Object {
          "changed": Object {
            "defaultValue": false,
            "disabled": true,
            "label": "Changed",
          },
          "entrypoint": Object {
            "defaultValue": false,
            "label": "Entrypoint",
          },
          "fileTypes": Object {
            "CSS": Object {
              "defaultValue": true,
              "label": "CSS",
            },
            "HTML": Object {
              "defaultValue": true,
              "label": "HTML",
            },
            "JS": Object {
              "defaultValue": true,
              "label": "JS",
            },
            "label": "File types",
          },
        }
      }
      label="Filters"
      onChange={[Function]}
      toggleFilter={[Function]}
      values={
        Object {
          "changed": false,
          "entrypoint": false,
          "fileTypes.CSS": true,
          "fileTypes.HTML": true,
          "fileTypes.JS": true,
        }
      }
    >
      <DropdownContainer
        align="right"
        className="root"
        glyph="filter"
        label="Filters"
      >
        <OutsideClickHandler
          disabled={false}
          display="block"
          onOutsideClick={[Function]}
          useCapture={true}
        >
          <div>
            <Dropdown
              activeLabel={false}
              align="right"
              className="root"
              dropdownToggle={[Function]}
              glyph="filter"
              label="Filters"
              open={false}
            >
              <div
                className="root right root"
              >
                <button
                  className="label"
                  onClick={[Function]}
                  type="button"
                >
                  <Icon
                    as="span"
                    className="labelIcon"
                    glyph="filter"
                  >
                    <span
                      className="root labelIcon"
                    >
                      <FilterIcon
                        className="icon"
                        fill="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <svg
                          className="icon"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                          />
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </FilterIcon>
                    </span>
                  </Icon>
                  Filters
                </button>
                <div
                  className="dropdown"
                >
                  <form
                    className="dropdown"
                  >
                    <div
                      className="group"
                      key=""
                    >
                      <div
                        className="groupHeader"
                      />
                      <Checkbox
                        checked={false}
                        disabled={true}
                        getOnOnlyClick={null}
                        key="changed"
                        label="Changed"
                        name="changed"
                        onChange={[Function]}
                      >
                        <div
                          className="filter"
                        >
                          <label
                            className="filterLabel"
                          >
                            <input
                              checked={false}
                              className="filterInput"
                              disabled={true}
                              id="filter-changed"
                              name="changed"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <span
                              className="filterText"
                            >
                              Changed
                            </span>
                          </label>
                        </div>
                      </Checkbox>
                      <Checkbox
                        checked={false}
                        getOnOnlyClick={null}
                        key="entrypoint"
                        label="Entrypoint"
                        name="entrypoint"
                        onChange={[Function]}
                      >
                        <div
                          className="filter"
                        >
                          <label
                            className="filterLabel"
                          >
                            <input
                              checked={false}
                              className="filterInput"
                              id="filter-entrypoint"
                              name="entrypoint"
                              onChange={[Function]}
                              type="checkbox"
                            />
                            <span
                              className="filterText"
                            >
                              Entrypoint
                            </span>
                          </label>
                        </div>
                      </Checkbox>
                      <div
                        className="group"
                        key="fileTypes"
                      >
                        <div
                          className="groupHeader"
                        >
                          <h3
                            className="groupTitle"
                          >
                            File types
                          </h3>
                          <button
                            className="groupHeaderButton"
                            onClick={[Function]}
                            type="button"
                          >
                            clear all
                          </button>
                        </div>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.CSS"
                          label="CSS"
                          name="fileTypes.CSS"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.CSS"
                                name="fileTypes.CSS"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                CSS
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.JS"
                          label="JS"
                          name="fileTypes.JS"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.JS"
                                name="fileTypes.JS"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                JS
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                        <Checkbox
                          checked={true}
                          getOnOnlyClick={[Function]}
                          key="fileTypes.HTML"
                          label="HTML"
                          name="fileTypes.HTML"
                          onChange={[Function]}
                        >
                          <div
                            className="filter"
                          >
                            <label
                              className="filterLabel"
                            >
                              <input
                                checked={true}
                                className="filterInput"
                                id="filter-fileTypes.HTML"
                                name="fileTypes.HTML"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <span
                                className="filterText"
                              >
                                HTML
                              </span>
                            </label>
                            <button
                              className="filterOnlyButton"
                              onClick={[Function]}
                              type="button"
                            >
                              only
                            </button>
                          </div>
                        </Checkbox>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </Dropdown>
          </div>
        </OutsideClickHandler>
      </DropdownContainer>
    </FiltersDropdown>
  </FiltersDropdownContainer>
</div>
`;
